# zoha-vte-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  justfile
patch/: p001_vte_hacks_for_properties.diff  p002_vte_hacks_for_prop_uri.diff  p002_vte_hacks_for_uri.diff
vte/include/vte-2.91/vte/: vtetypebuiltins-gtk3.h  vteversion.h
vte/share/gir-1.0/: Vte-2.91.gir
zoha-vte/: Cargo.toml  Gir.toml  README.md
zoha-vte-sys/: Cargo.toml  Gir.toml  README.md  build.rs  manual.diff
zoha-vte-sys/patch/: p002_build_rs_hacks.diff  p003_drop_systemd.diff  p004_drop_uuid.diff  p005_fix_back.diff
zoha-vte-sys/src/: lib.rs
zoha-vte-sys/src/auto/: versions.txt
zoha-vte-sys/tests/: abi.rs  constant.c  layout.c
zoha-vte/patch/: p001_rust_syntax_fix.diff  p002_glib_types_fix.diff
zoha-vte/src/: lib.rs
zoha-vte/src/auto/: enums.rs  event_context.rs  flags.rs  mod.rs  properties.rs  properties_registry.rs  pty.rs  regex.rs  terminal.rs  uuid.rs  versions.txt
