[package]
name = "zoha-vte-sys"
version = "0.7.0"
links = '"vte-2.91"'
edition = "2024"
build = "build.rs"
authors = ["Koosha Hosseiny <git@koosha.io>"]
description = "GTK VTE bindings for rust, c bindings crate"
homepage = "https://github.com/hkoosha/zoha-vte-rs"
license = "GPL-3.0"
readme = "README.md"

[package.metadata.system-deps.vte_2_91]
name = "vte-2.91"
version = "0.85"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
all-features = true

[lib]
name = "vte_sys"

[dependencies]
libc = "0.2"
cairo-sys-rs = "0.18.2"
gdk-pixbuf-sys = "0.18.0"
gdk-sys = "0.18.2"
gio-sys = "0.18.1"
glib-sys = "0.18.1"
gobject-sys = "0.18.0"
gtk-sys = "0.18.2"
pango-sys = "0.18.0"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
