[package]
name = "zoha-vte"
version = "0.7.0"
edition = "2024"
authors = ["Koosha Hosseiny <git@koosha.io>"]
description = "GTK VTE bindings for rust"
homepage = "https://github.com/hkoosha/zoha-vte-rs"
license = "GPL-3.0"
readme = "README.md"

[dependencies]
libc = "0.2"
bitflags = "1.3.2"

cairo-rs = "0.21.5"
cairo-sys-rs = "0.21.5"
gdk-pixbuf = "0.21.5"
gdk-pixbuf-sys = "0.21.5"
gdk = "0.18.2"
gdk-sys = "0.18.2"
gio = "0.21.5"
gio-sys = "0.21.5"
glib = "0.21.5"
glib-sys = "0.21.5"
gobject-sys = "0.21.5"
gtk = "0.18.2"
gtk-sys = "0.18.2"
pango = "0.21.5"
pango-sys = "0.21.5"

zoha-vte-sys = { path = "../zoha-vte-sys", version = "0.7.0"}
