[package]
name = "zoha-vte"
version = "0.7.0"
edition = "2024"
authors = ["Koosha Hosseiny <git@koosha.io>"]
description = "GTK VTE bindings for rust"
homepage = "https://github.com/hkoosha/zoha-vte-rs"
license = "GPL-3.0"
readme = "README.md"

[dependencies]
libc = "0.2"
bitflags = "1.3.2"

atk = "0.18.2"
cairo-rs = "0.18.2"
gdk-pixbuf = "0.18.0"
gdk = "0.18.2"
gio = "0.18.1"
glib = "0.18.1"
gtk = "0.18.2"
gobject = {package = "gobject-sys", version = "0.18.0" }
pango = "0.18.0"

ffi = {package = "zoha-vte-sys", path = "../zoha-vte-sys", version = "0.7.0"}
